2nd training/Community/Community/Community1/force-app/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <label>Employment History</label>
    <nameField>
        <label>Name of Employer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Historys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>