2nd training/Community/Community/Community1/force-app/main/default/objects/Employment_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment Historys</relationshipLabel>
    <relationshipName>Employment_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>