2nd training/Community/Community/Community1/force-app/main/default/objects/Employment_History__c/fields/Designation_Brief_Description_of_Dutie__c.field-meta.xml
<CustomField>
    <fullName>Designation_Brief_Description_of_Dutie__c</fullName>
    <label>Designation/Brief Description of Duties</label>
    <type>TextArea</type>
</CustomField>