2nd training/Community/Community/Community1/force-app/main/default/objects/Employment_History__c/fields/Last_Drawn_Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Last_Drawn_Monthly_Salary__c</fullName>
    <label>Last Drawn Monthly Salary:</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>