2nd training/Community/Community/Community1/force-app/main/default/objects/Employment_History__c/fields/To_Year__c.field-meta.xml
<CustomField>
    <fullName>To_Year__c</fullName>
    <label>To (Year):</label>
    <length>4</length>
    <type>Text</type>
</CustomField>